
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int coap_queue_t ;



coap_queue_t * coap_peek_next( coap_queue_t *queue ) {
  if ( !queue )
    return ((void*)0);

  return queue;
}
